added name index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>bootcamp2020</title>
 </head>
 <body>
-    hello world salman khan
+    hello world sultan salman khan and king khan..
 </body>
 </html>
