new headings index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>bootcamp2020</title>
 </head>
 <body>
+    <h1>my first website is deployed</h1>
+    <h2>my first website is deployed</h2>
+    <h3>my first website is deployed</h3>
+    <h4>my first website is deployed</h4>
     <h5>my first website is deployed</h5>
     hello world sultan salman khan and king khan..
 </body>
