--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h3>my first website is deployed</h3>
     <h4>my first website is deployed</h4>
     <h5>my first website is deployed</h5>
+    <h6>added by ghazal aroosa</h6>
     hello world sultan salman khan and king khan..
 </body>
 </html>
